Fix error in config file

--- a/templates/krb5.conf.j2
+++ b/templates/krb5.conf.j2
@@ -35,7 +35,7 @@
     {% endfor %}
 
 {% if krb5.config.dbmodule is defined %}
-[dbmodule]
+[dbmodules]
     {% for key, dbmodule in krb5.config.dbmodule.items() %}
     {{ key }} = {
         {% if dbmodule.db_library is defined %}
